# pyslavseq

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
profile/: profile.py  profile.sh
pyslavseq/add_tags/: add_tags.py
pyslavseq/data/genome/: hg19.py  hs37d5.genome  hs37d5.py
pyslavseq/features/: ensearch.pfm  get_window_features_occupied.py  ttaaaa.py  ttaaaa_bio.py  ttaaaa_moods.py
pyslavseq/rmdup/: __init__.py  slavseq_rmdup_hts.py
pyslavseq/tags/: __init__.py  add_tags.py
src/pyslavseq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pyslavseq/util/: pepysam.py
tests/: test_dummy.py
tests/genome/: mini.chromsizes  mini.chromsizes~  mini.fa  mini.fa.fai  mini.fa~  test_genome.py  test_ttaaaa.py
tests/rmdup/: test_perl_output.py  test_prio_pair_rmdup.py  test_slavseq_rmdup_hts.py
tests/tabix/: dummy.bgz  dummy.bgz.tbi  test_tabix.py  test_window_features.py
tests/tags/: hs37d5_hg19_chr22.fa  test.bam  test.sam  test_add_tags_perl.py
