[tool.poetry]
name = "pyslavseq"
version = "0.1.0"
description = "Variant calling for Somatic L1-Associated Variant (SLAV) sequencing"
authors = ["Apuã Paquola <apuapaquola@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pysam = "^0.19.1"
MOODS-python = "^1.9.4"

[tool.poetry.dev-dependencies]
# TODO add pytest

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
