[tool.poetry]
name = "pyslavseq"
version = "0.1.1"
description = "Variant calling for Somatic L1-Associated Variant (SLAV) sequencing"
authors = ["Apuã Paquola <apuapaquola@gmail.com>", "Michael Cuoco <mcuoco@ucsd.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/mikecuoco/pyslavseq"
packages = [
    { include = "pyslavseq"}
    ]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pysam = "^0.19.1"
MOODS-python = "^1.9.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
pyslavseq_extract_features = "pyslavseq.features.get_window_features_occupied:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
